tests/ui/ergonomic-clones/closure/multiple-use-variants.stderr
error[E0382]: use of moved value: `inner`
  --> $DIR/multiple-use-variants.rs:32:19
   |
LL |         takes_val(inner);
   |                   ----- value moved here
LL |         takes_val(inner)
   |                   ^^^^^ value used here after move
   |
   = note: move occurs because `inner` has type `Inner<'_, String>`, which does not implement the `Copy` trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
